tests/NormalTests/paczka2/big_fuzzy/73678917.err
Error in line 7: rjeig A464 36,8
Error in line 9: wlexXEFRAZ A464 24,7
Error in line 15: wlexXEFRAZ S87 28,2
Error in line 50: saBa4490no5 S92 76,9
Error in line 60: QsL3z7EJ S92 -3,6
Error in line 68: rjeig A100 77,1
Error in line 80: Ljo9NTJLC A100 107,2
Error in line 103: saBa4490no5 S92 37,3
Error in line 108: saBa4490no5 S87 22,9
Error in line 112: uG68Gtrta3 A464 77,3
Error in line 98: wlexXEFRAZ S87 67,0
Error in line 115: QsL3z7EJ A100 29,7
Error in line 117: uG68Gtrta3 A100 92,9
Error in line 135: uG68Gtrta3 S92 85,7
Error in line 132: QsL3z7EJ A464 144,4
Error in line 143: wlexXEFRAZ A100 31,2
Error in line 147: wlexXEFRAZ S87 2,0
Error in line 148: uG68Gtrta3 S92 72,0
Error in line 160: wlexXEFRAZ S87 83,1
Error in line 159: QsL3z7EJ S87 23,1
Error in line 164: QsL3z7EJ A464 88,5
Error in line 166: rjeig A100 7,7
Error in line 138: saBa4490no5 A100 0,3
Error in line 171: saBa4490no5 S92 56,9
Error in line 180: A464 S92 48,2
Error in line 183: rjeig S92 67,0
Error in line 192: rjeig S87 28,6
Error in line 201: Ljo9NTJLC A100 99,2
Error in line 210: rjeig S87 -2,7
Error in line 212: QsL3z7EJ A464 50,3
Error in line 214: QsL3z7EJ S87 62,0
Error in line 209: wlexXEFRAZ S87 1,4
